maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:35: error: ';' expected but 'else' found.
  else{
  ^