maze.island.IslandMaze.scala.code
override def run() {
  while(getY()!=0){
    trouverNord()
  }
  while(!verfifierMurGauche()){
    gauche()
  }
  while(!estSurBiscuit()){
    keepHandOnSideWall()
  }
  prendBiscuit()
}

def keepHandOnSideWall(){
  if (estFaceMur()){
    verifierMurGauche() match{
      case true => droite();if(!estFaceMur()){avance()}
      case false => while (estFaceMur()){gauche()};avance()
    }
  }
  else{
  	verifierMurGauche() match{
      	case true => avance()
      	case false => gauche();avance()
  	} 
	}
}

def trouverNord(){
  setDirection(Direction.North)
  while(!estFaceMur()){
    avance()
  }
  else{
    droite()
    avance()
  }
  
}

def verifierMurGauche():Boolean={
  gauche()
  estFaceMur() match{
    case true => droite();return true
    case false => droite();return false
  }
  
}